--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": "airbnb",
+  "extends": "airbnb-base",
   "env": {
     "browser": true,
     "mocha": true,
@@ -14,16 +14,21 @@
     "comma-dangle": 0,
     "no-use-before-define": 0,
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
+    "import/no-named-default": 0,
     "import/no-extraneous-dependencies": 0,
     "react/jsx-no-bind": 0,
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 2,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/react-in-jsx-scope": 1
   },
   "plugins": [
     "import",
     "react"
   ],
   "settings": {
+    "import/extensions": [".js"],
     "import/resolver": {
       "webpack": {
         "config": "webpack.config.eslint.js"
