--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-2": "^6.22.0",
     "enzyme": "^2.7.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-react": "^6.10.0",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
@@ -14,7 +18,6 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-flip-move": "^2.9.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-touch-events": "^2.0.0",
@@ -27,8 +30,13 @@
     "build-css": "node-sass src/ -o src/",
     "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
+    "test-with-coverage": "react-scripts test --env=jsdom --coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "verbose": true,
+    "automock": true
   }
 }
