--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.9.4"
+    "react-scripts": "0.9.4",
+    "react-test-renderer": "^15.4.2"
   },
   "dependencies": {
     "moment": "^2.17.1",
