--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react-app": "^2.2.0",
     "babel-preset-stage-2": "^6.22.0",
     "enzyme": "^2.7.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-react": "^6.10.0",
+    "identity-obj-proxy": "^3.0.0",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.9.4",
-    "react-test-renderer": "^15.4.2"
+    "react-test-renderer": "^15.4.2",
+    "regenerator-runtime": "^0.10.3"
   },
   "dependencies": {
     "moment": "^2.17.1",
@@ -37,7 +41,8 @@
     "eject": "react-scripts eject"
   },
   "jest": {
-    "verbose": true,
-    "automock": true
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
