--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ install:
 script:
   - npm run build-css
   - npm test
+addons:
+  code_climate:
+    repo_token: $code_climate
+after_success:
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < lcov.info
