--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react-app": "^2.2.0",
@@ -14,17 +15,20 @@
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
-    "react-scripts": "0.9.4",
+    "react-scripts": "0.9.5",
     "react-test-renderer": "^15.4.2",
     "regenerator-runtime": "^0.10.3"
   },
   "dependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-import": "^2.2.0",
     "moment": "^2.17.1",
-    "react": "^15.4.2",
+    "prop-types": "^15.5.8",
+    "react": "15.5.4",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
+    "react-router": "3.0.2",
     "react-touch-events": "^2.0.0",
     "redux": "^3.6.0"
   },
@@ -38,7 +42,9 @@
     "test-with-coverage": "react-scripts test --env=jsdom --coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "jest": {
     "moduleNameMapper": {
